--- a/example/grps_pedegree.tex
+++ b/example/grps_pedegree.tex
@@ -1,6 +1,6 @@
 \documentclass[10pt,a4paper,twoside, dutch]{article}
-\usepackage{grpslua}
-\usepackage{headers}
+\usepackage{./../style/grpslua}
+
 \grampsdatabase{sqlite.db}
 
 \makeindex
