--- a/style/grpsbase.sty
+++ b/style/grpsbase.sty
@@ -17,6 +17,7 @@
 \RequirePackage{mfirstuc}
 \RequirePackage{xkeyval}
 \RequirePackage{xstring}
+\RequirePackage{enumitem}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Indexing. We do not want this together with LTXDOC.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -56,6 +57,7 @@
 % Packages for images
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \RequirePackage{tikz}
+\usetikzlibrary{positioning}
 \RequirePackage{calc}
 \RequirePackage{graphicx}
 \RequirePackage{fancyref}
@@ -66,7 +68,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%  \subsection{Images}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
- \newenvironment{Figure}{\nopagebreak[4]}{\par}%
+\newenvironment{Figure}{\nopagebreak[4]}{\par}%
+ %\newenvironment{Figure}{\begin{figure}[htb]}{\end{figure}}%
  \tikzset{%
 	tagbox/.style = {red,thick,solid},%
 	tagtext/.style = {black,thick,solid,rounded corners,fill=white},%
@@ -88,6 +91,35 @@
 	grps.allmedia( )
 }}%
 %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%  \subsection{first Caps}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\newcommand{\firstcap}[1]{\directlua{word_first_cap(\luastring{#1})}}
+\newcommand{\startcap}[1]{\directlua{line_first_cap(\luastring{#1})}}
+\newcommand{\pointendline}[1]{\directlua{point_end_line(\luastring{#1})}}
+
+\begin{luacode}
+function word_first_cap ( s )
+   s = unicode.utf8.gsub( s , "%s*(%a)(%a*)%s*",
+          function(x,y)
+            return ( unicode.utf8.upper(x) .. unicode.utf8.lower(y).." " )
+          end )
+   tex.sprint ( string.sub(s,1,-2) )
+end
+
+function line_first_cap ( s )
+   s = unicode.utf8.gsub(s,"^%s*(%a)", function(x) return (unicode.utf8.upper(x)) end)
+   tex.sprint ( s )
+end
+
+function point_end_line(s)
+   s = unicode.utf8.gsub(s, "(%a)%s*$", function(x) return(x..". ") end)
+   tex.sprint(s)
+end
+\end{luacode}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %  \subsection{People and Gramps}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -159,6 +191,87 @@
 	end
 }%
 }
+
+%% \paragraph{Output options} in Lua \\
+%% \begin{tabular}{lll}
+%% grps.OPTION. & type & option \\
+%% \hline
+%% &  O\_CENTRAL=1&        LONG=0\\
+%% &  O\_SPOUSE=2&         LIFEEVENTS=1\\
+%% &  O\_PARENTS=4&,       VOCATIONAL=2\\
+%% &  O\_CHILDREN=3&       RESIDENCE=3\\
+%% &  O\_SPOUSE\_HANDLE=5&  RELATIONS=4\\
+%% &  O\_LEVEL=6&          PARENTS=5\\
+%% &  O\_MAXMEDIA=7  &    CHILDREN=6\\
+%% &                &    FULLNAME=7\\
+%% &                &    SPOUSEPARENTS=8\\
+%% &                &    MEDIA=9 \\
+%% &                &    ITEMIZE=10 \\
+%% &                &    SIBLINGS=11
+%% \end{tabular}
+
+\begin{luacode}
+  if not grps then grps = require("gramps") end
+
+  function options_no(opts,no_opts)
+      for i=1,4 do opts[i] = grps.remove_options(opts[i],no_opts) end
+  end
+  function options_yes(opts,no_opts,tot)
+      local stop = tot or 4
+      for i=1,stop do opts[i] = grps.set_options(opts[i],no_opts) end
+  end
+
+\end{luacode}
+
+%% \marg{gramps\_id or handle}
+%% \oarg{option} \\
+%% default \\
+%% fullname (1-4)\\
+%% depth \\
+%% long \\
+%% short \\
+%% relations \\
+%% lifeevents \\
+%% parents \\
+%% children \\
+%% vocation \\
+%% residence \\
+%% media \\
+%% maxmedia \\
+%% itemize \\
+%% \cmd{grpsPrintPerson}[fullname,depth=1,long,lifeevents=3,parents=2]\marg{I0018}=\\
+%% \grpsPrintPerson[fullname,depth=1,long,lifeevents=3,parents=2]{I0018}
+\newcommand{\grpsPrintPerson}[2][]{%
+  \loadgramps%
+  \setkeys{grpskeys}{depth=2,fullname,#1}
+  \directlua{%
+    local options
+    \if@grps@default@ options=grps.default_options() \else options={0,0,0,0,0,1} \fi
+%
+    \if@grps@fullname@
+      options_yes(options,grps.OPTION.FULLNAME)
+      grps.remove_options(options[grps.OPTION.O_CHILDREN], grps.OPTION.FULLNAME)
+    \fi%
+%
+    options_yes(options,grps.OPTION.LONG,\grps@option@long)
+    options_yes(options,grps.OPTION.PARENTS,\grps@option@parents)
+    options_yes(options,grps.OPTION.RELATIONS,\grps@option@relations)
+    options_yes(options,grps.OPTION.LIFEEVENTS,\grps@option@lifeevents)
+    options_yes(options,grps.OPTION.VOCATIONAL,\grps@option@vocation)
+    options_yes(options,grps.OPTION.RESIDENCE,\grps@option@residence)
+    options_yes(options,grps.OPTION.MEDIA,\grps@option@media)
+    options_yes(options,grps.OPTION.CHILDREN,\grps@option@children)
+    options_yes(options,grps.OPTION.ITEMIZE,\grps@option@itemize)
+    options[grps.OPTION.O_MAXMEDIA]=\grps@option@maxmedia
+%
+    \if@grps@option@siblings@
+      options[OPTION.O_CENTRAL]=grps.set_options(options[OPTION.O_CENTRAL],OPTION.SIBLINGS)%
+    \else
+      options[OPTION.O_CENTRAL]=grps.remove_options(options[OPTION.O_CENTRAL],OPTION.SIBLINGS)
+    \fi
+%
+    grps.print_person('\luaescapestring{#2}',\grps@option@depth,1,options,1)
+}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% \subsection{Lists}
  %%
@@ -231,6 +344,23 @@
   \renewcommand{\makelabel}[1]{\bf\makebox{##1}}%
   }\tiny}{\end{list}}
 %
+\newenvironment{compactitemize}{%
+\setlength\parskip{0pt}
+\begin{itemize}[
+  topsep=0pt,
+  partopsep=0pt,
+  parsep=0pt,
+  itemsep=0pt,
+  leftmargin=3ex,
+  rightmargin=0pt,
+  listparindent=0pt,
+  labelwidth=3ex,
+  labelsep=0pt,
+  itemindent=0ex,
+  align=left,
+  after=\vspace{0pt}%\vspace{-\baselineskip}
+  ]}{\end{itemize}%
+  }%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%\subsection{Utils}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
