--- a/style/grpslanguage.sty
+++ b/style/grpslanguage.sty
@@ -29,8 +29,10 @@
  \def\grpsTwoonde{lived }
  \def\grpsTte{in }
  \def\grpsTtot{til}
- \def\grpsTberoepis{occupation is }
+ \def\grpsTberoepis{work as }
  \def\grpsTopleiding{is educationed }
+ \def\grpsTsibling{sibling is }
+ \def\grpsTsiblings{siblings are }
  \newcommand{\grpsTmonth}[1]{%
   \ifcase#1
     \or January\or February\or March\or April\or May\or June%
@@ -72,8 +74,12 @@
  \def\grpsTgedoopt{is gedoopt }
  \def\grpsTwoonde{woonde }
  \def\grpsTte{in }
- \def\grpsTberoepis{beroep is }
+ \def\grpsTberoepis{werkte als }
  \def\grpsTopleiding{is opgeleid }
+ \def\grpsTsibling{sibling is }
+ \def\grpsTsiblings{siblings is }
+ \def\grpsTsibling{broer/zus is }
+ \def\grpsTsiblings{broers/zussen zijn }
  \renewcommand{\grpsTmonth}[1]{%
   \ifcase#1
     \or januarie\or februarie\or maart\or april\or mei\or juni%
